- new: show participated stations for a specific strike in map
- new: show top stations per tile in dynamic map
- new: email and more text output on errors during import
- new: show new stations in network statistics
- new: alt-tag in "img"
- new: maps for western/central europe (germany+france), france and new europe map with nicer colors
- new: smooth colors for maps
- new: gif animations for maps
- new: extended traffic and database statistics (when logged-in)
- new: status files - insert some information (strike count etc...) in your HTML files
- other visual improvements for maps
- cleanup in default_settings.inc.php and templates.inc.php

Version 0.6a (2011-08-10)
------------------------
- new: strike rates for region
- new: station linking with auth id
- fix: performance issue in statistics

Version 0.6 (2011-08-05)
------------------------
- new: regions (use i.e. &mark=germany on map image to see the area)
- new: spectrum of raw signals
- new: a lot of advanced statistics
- avoid url retrieving with 'file_get_contents' (thx to a2700franz) 
- headers
- palette images

Version 0.5.3 (2011-07-13)
---------------------------
- new: added default graph times (BO_GRAPH_STAT_HOURS_BACK, BO_GRAPH_STAT_HOURS_BACK_STATIONS)
- new: search strike by date/time-range for users with permission
- fix: wrong time on "station statistics" displayed when station is offline
- fix: update-code improved
- fixed a some other small bugs

Version 0.5.2 (2011-07-06)
---------------------------
IMPORTANT: You have to update the database (log in), otherwise strike import won't work anymore
- improved: strike search (faster, unlimitied for users with permission)
- improved: behaviour on active station count changed ("available stations" added, offline = no signals)
- fix: dynamic map not working on very fast internet connections (race condition)
- added wetterinfo overlay

Version 0.5.1c (2011-06-27)
---------------------------
- fixes
- dark map of bavaria
